# ci-test

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
.github/workflows/: main.yml
cmake/: parse_version.cmake
profiles/: linux-x86_64-debug  linux-x86_64-static  macos-arm64-debug  macos-arm64-static
